[package]
name = "recompose"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dev-dependencies]
bevy = "0.15.0"

[dependencies]
recompose_core = { path = "crates/recompose_core" }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "todo"
path = "examples/todo.rs"

[[example]]
name = "external_state"
path = "examples/external_state.rs"
