[package]
name = "recompose"
description = "Declarative framework for the Bevy game engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ad-kr/recompose"
readme = "README.md"
keywords = ["bevy", "ui", "declarative"]
categories = ["game-development"]

[workspace]
members = ["crates/*"]

[dev-dependencies]
bevy = "0.15.0"

[dependencies]
recompose_core = { version = "0.1.1", path = "crates/recompose_core" }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "todo"
path = "examples/todo.rs"

[[example]]
name = "external_state"
path = "examples/external_state.rs"

[[example]]
name = "dynamic_composables"
path = "examples/dynamic_composables.rs"
