[package]
name = "recompose_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { version = "0.15.0", default-features = false }
bevy_ecs = { version = "0.15.0", default-features = false }
bevy_hierarchy = { version = "0.15.0", default-features = false }
bevy_reflect_derive = { version = "0.15.0", default-features = false }
bevy_picking = { version = "0.15.0", default-features = false }
bevy_reflect = { version = "0.15.0", default-features = false }

paste = "1.0.15"
