[package]
name = "recompose_core"
description = "Core crate of the `recompose` crate"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ad-kr/recompose"
keywords = ["bevy", "ui", "declarative"]
categories = ["game-development"]

[dependencies]
bevy_app = { version = "0.15.0", default-features = false }
bevy_ecs = { version = "0.15.0", default-features = false }
bevy_hierarchy = { version = "0.15.0", default-features = false }
bevy_reflect_derive = { version = "0.15.0", default-features = false }
bevy_picking = { version = "0.15.0", default-features = false }
bevy_reflect = { version = "0.15.0", default-features = false }

paste = "1.0.15"
